# photo-upscaler

./: .gitignore  config.default.yaml  pyproject.toml
models/: README.md
src/upscaler/: __init__.py  __main__.py
src/upscaler/api/: app.py  dependencies.py  schemas.py  websocket.py
src/upscaler/api/routes/: compare.py  images.py  models.py  settings.py  upscale.py
src/upscaler/cli/: main.py
src/upscaler/cli/commands/: batch_cmd.py  compare_cmd.py  models_cmd.py  serve_cmd.py  upscale_cmd.py
src/upscaler/core/: batch.py  comparison.py  config.py  image_io.py  model_manager.py  model_registry.py  progress.py  tiling.py  upscale_engine.py
src/upscaler/web/: app.js  index.html
src/upscaler/web/components/: BatchPanel.js  ComparisonView.js  ImageUploader.js  ImageViewer.js  ModelSelector.js  ProgressTracker.js  SettingsPanel.js
src/upscaler/web/styles/: main.css
tests/: conftest.py  test_api.py  test_comparison.py  test_image_io.py  test_model_manager.py  test_tiling.py  test_upscale_engine.py
